# courswork_3

./: .env.template  pyproject.toml  requirements.txt
settings/: config.py
src/: api.py  database.py  db_init.py  db_manager.py  main.py  models.py
